- 
    Bug 
- 
    Resolution: Fixed
- 
    P2: Important 
- 
    5.15.13, 5.15.17, 6.7.2
- 
        ff074177c (dev)
Tumbler rendering does not behave correctly when wrap value changes.
- On Startup, console output indicates wrap value changes twice, false->true, true->false, tumbler breaks, hits reload model button to recover the tumblerĀ
- Increasing the model until wrap switches on, tumbler breaks
- Hit toggle wrap button, tumbler breaks