Fix tumbler rendering when wrap value changes

Previously, when the tumbler view type changed and a delegate was set,
the delegates' sizes were not being updated properly. Now, we update
them when the new view is set up. Also add a test to verify the
behavior.

Fixes: QTBUG-127613
Change-Id: I07a14042e8dae4c25ed03b4dfd1411424713c72c
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>